--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
     "@ngrx/effects": "7.2.0"
   },
   "devDependencies": {
+    "jest-preset-angular": "7.0.0",
+    "@nrwl/builders": "7.8.5",
+    "jest": "24.1.0",
+    "@types/jest": "24.0.9",
     "@angular-devkit/build-angular": "^0.13.0",
     "@angular/cli": "~7.0.3",
     "@angular/compiler-cli": "~7.0.1",
