--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,17 +10,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"],
     "paths": {
-      "@blog/*": [
-        "libs/*"
-      ]
+      "@blog/*": ["libs/*"],
+      "@blog/ngrx-router": ["libs/ngrx-router/src/index.ts"]
     }
   }
 }
